--- a/index.html
+++ b/index.html
@@ -96,6 +96,25 @@ drift.load('57v3s2nzygt6');
                   <h1>Complete set of tools for growth hacking</h1>
                   <!--<p>Best in class big data software and analytics services will render your huge chunks into <br class="hidden-xs"> meaningful data. Try the demo now.</p>-->
                 </div>
+                <div id="root1"></div>
+<div class="calculator1" data-xyz = "Is this xyz" data-form-id="XhfWxYIyq"></div>
+<script type="text/javascript" id="calculator1-gPHwzstrdCj98ooaK" class="convertcalculator-async-script-loader">
+  (function() {
+    function async_load(){
+      var s = document.createElement("script");
+      s.type = "text/javascript";
+      s.async = true;
+      var url = 'https://hfstaging.firebaseapp.com/bundle.js';
+      s.src = url + ( url.indexOf("?") >= 0 ? "&" : "?") + "ref=" + encodeURIComponent(window.location.href);
+      var embedder = document.getElementById('calculator1-gPHwzstrdCj98ooaK');
+      embedder.parentNode.insertBefore(s, embedder);
+    }
+    if (window.attachEvent)
+      window.attachEvent("onload", async_load);
+    else
+      window.addEventListener("load", async_load, false);
+  })();
+</script>
                 <div class="subform wow fadeInDown" data-wow-delay="0.3s">
                   <form id="signup" class="formee" name="contact" method="POST" netlify>
                    <input name="email" id="email" type="text" />
