--- a/index.html
+++ b/index.html
@@ -18,34 +18,6 @@
     <link rel="stylesheet" href="assets/css/ionicons.min.css"> <!-- Resource style -->
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" media="all" />
     
-    <!-- Start of Async Drift Code -->
-<script>
-"use strict";
-
-!function() {
-  var t = window.driftt = window.drift = window.driftt || [];
-  if (!t.init) {
-    if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
-    t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ], 
-    t.factory = function(e) {
-      return function() {
-        var n = Array.prototype.slice.call(arguments);
-        return n.unshift(e), t.push(n), t;
-      };
-    }, t.methods.forEach(function(e) {
-      t[e] = t.factory(e);
-    }), t.load = function(t) {
-      var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
-      o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
-      var i = document.getElementsByTagName("script")[0];
-      i.parentNode.insertBefore(o, i);
-    };
-  }
-}();
-drift.SNIPPET_VERSION = '0.3.1';
-drift.load('57v3s2nzygt6');
-</script>
-<!-- End of Async Drift Code -->
 
 <!-- Hotjar Tracking Code for https://Testbox.co/ -->
 <script>
@@ -59,8 +31,7 @@ drift.load('57v3s2nzygt6');
     })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
 
-
-    
+   
   </head>
   <body data-spy="scroll">
     <div class="wrapper">
@@ -96,17 +67,16 @@ drift.load('57v3s2nzygt6');
                   <h1>Complete set of tools for growth hacking</h1>
                   <!--<p>Best in class big data software and analytics services will render your huge chunks into <br class="hidden-xs"> meaningful data. Try the demo now.</p>-->
                 </div>
-                <div id="root1"></div>
-<div class="calculator1" data-xyz = "Is this xyz" data-form-id="XhfWxYIyq"></div>
-<script type="text/javascript" id="calculator1-gPHwzstrdCj98ooaK" class="convertcalculator-async-script-loader">
+               <div class="calculator" data-calc-id="Q3skJE5zkfL6AQMwR"></div>
+<script type="text/javascript" id="convertcalculator-embedder-QcfkC5YapoJ7dhFBm" class="convertcalculator-async-script-loader">
   (function() {
     function async_load(){
       var s = document.createElement("script");
       s.type = "text/javascript";
       s.async = true;
-      var url = 'https://hfstaging.firebaseapp.com/bundle.js';
+      var url = 'https://app.convertcalculator.co/embed.js';
       s.src = url + ( url.indexOf("?") >= 0 ? "&" : "?") + "ref=" + encodeURIComponent(window.location.href);
-      var embedder = document.getElementById('calculator1-gPHwzstrdCj98ooaK');
+      var embedder = document.getElementById('convertcalculator-embedder-QcfkC5YapoJ7dhFBm');
       embedder.parentNode.insertBefore(s, embedder);
     }
     if (window.attachEvent)
